force-app/main/default/objects/Product_Extension__c/Product_Extension__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the suffix code and product availability details with ordering instructions.</description>
    <label>Product Extension</label>
    <nameField>
        <label>Product Extension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>