force-app/main/default/objects/Product_Extension__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the asset.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Product Extension</relationshipLabel>
    <relationshipName>Product_Extension</relationshipName>
    <type>Lookup</type>
</CustomField>