force-app/main/default/objects/Product_Extension__c/fields/Order_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_Code__c</fullName>
    <description>This field is used to store the order code of the product.</description>
    <label>Order Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>