force-app/main/default/objects/Product_Extension__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field is used to differentiate the ordering instructions and product availability details.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordering Instructions</fullName>
            </value>
            <value>
                <fullName>Product Availability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>